--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <div class="custom-text-box mb-lg-0">
-                                        <h5 class="mb-3">Our Mission</h5>
+                                        <h5 class="mb-3">Our Mission for this year</h5>
 
                                         <p>Empowering veterans to navigate their career transitions from military to civilian job market with confidence and  clarity.</p>
                                     </div>
